--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <!-- Title -->
-    <title> Starter Kit </title>
+    <title> StudentsHouse </title>
     <!-- Responsive Meta Tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
